@@ -1,6 +1,7 @@
 # Change log
 
 Date          Version   Comment
+2017/01/18    1.1.5     Handle bookmarks/cross-references, improve image export and map heading levels
 2017/01/17    1.1.4     Finally get images to export properly
 2017/01/05    1.1.3     Fix error when handling empty table cells
 2016/12/11    1.1.2     Improve export Word file formatting
